implemented reset password, with some little issues, tested only with ming, untested replace template, replace form, more hooks are needed

--- a/resetpassword/templates/change_password.html
+++ b/resetpassword/templates/change_password.html
@@ -6,12 +6,12 @@
 
 <head>
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" py:if="False"/>
-  <title>Request Password Reset</title>
+  <title>Change Password</title>
 </head>
 
 <body>
     <div>
-        ${reset_password_form.display(action=action)}
+        ${new_password_form.display(value=form_data, action=action)}
     </div>
 </body>
 </html>
